--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,41 @@ body {
     text-wrap: balance;
   }
 }
+
+@keyframes fadeIn {
+    0% {
+      opacity: 0;
+      transform: translateY(20px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  
+  @keyframes gradientXy {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
+  
+  .animate-fade-in {
+    animation: fadeIn 1.5s ease-in-out forwards;
+  }
+  
+  .animate-gradient-xy {
+    background-size: 200% 200%;
+    animation: gradientXy 8s ease infinite;
+  }
+  
+  .animate-text-gradient {
+    background-size: 200% 200%;
+    animation: gradientXy 4s ease-in-out infinite;
+  }
+  
